Kubernetes/1-micro_api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ho-ma-ingress
  namespace: hospital-management
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ho-ma-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2' # Default value
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443' # If the connection established by the client is HTTP then it will direct it to HTTPs
    alb.ingress.kubernetes.io/subnets: subnet-07293620eafab6801, subnet-0c1092d6d81be44f3
    alb.ingress.kubernetes.io/auth-session-cookie: session
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=app_cookie,stickiness.app_cookie.cookie_name=session,deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
    # the below annotations are for external dns to choose which host to update on route35 
    external-dns.alpha.kubernetes.io/hostname: ""
    alb.ingress.kubernetes.io/certificate-arn: ""
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: ho-ma-api
      port:
        number: 8000
  tls:
  - hosts:
    - "*.markettest.store"
  rules:
  - host: ho-ma.markettest.store
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1"
        backend:
          service:
            name: ho-ma-api
            port: 
              number: 8000
